# im

./: LICENSE  PRODUCTION_OPTIMIZATION_README.md  README.md  build.gradle  gradle.properties  login.txt  readme.txt  settings.gradle
app/: build.gradle  google-services.json
app/src/main/: AndroidManifest.xml
app/src/main/proto/: ImMessage.proto
app/src/main/res/drawable/: selector_click_feedback.xml  shape_btn_send_bg.xml  shape_btn_voice_bg.xml  shape_card_background.xml  shape_chat_time_bg.xml  shape_circle_avatar.xml  shape_input_bg.xml  shape_left_chat_bubble.xml  shape_recycler_bg.xml  shape_release_btn.xml  shape_right_chat_bubble.xml  shape_rounded_input_background.xml  shape_unread_badge.xml
app/src/main/res/layout/: activity_chat_info.xml  activity_email_password.xml  activity_friend_apply.xml  activity_friend_profile_card.xml  activity_login_register.xml  activity_main.xml  activity_public_fragment.xml  activity_register.xml  activity_test.xml  fragment_chat.xml  fragment_chat_setting.xml  fragment_feed.xml  (+13 more)
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
nativelib/: build.gradle
nativelib/jni/: CMakeLists.txt  Player.cpp  build.gradle  native-lib.cpp
nativelib/jni/enc/: Enc.cpp
nativelib/jni/ffmpeg/include/libavutil/: ffversion.h
nativelib/jni/src/androidTest/java/com/lythe/jni/: ExampleInstrumentedTest.java
nativelib/jni/src/main/cpp/: jni.cpp
nativelib/jni/src/main/java/com/lythe/jni/: NativeLib.java
nativelib/jni/src/test/java/com/lythe/jni/: ExampleUnitTest.java
nativelib/src/main/cpp/: nativelib.cpp
(+128 files in other folders)
